--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,9 @@
         }
     ],
     "require": {
-        "php": "^8.2",
-        "laravel/framework": "^10.0|^11.0",
-        "eveseat/web": "^5.0",
         "eveseat/services": "^5.0",
+        "eveseat/eveapi": "^5.0",
+        "eveseat/web": "^5.0"
     },
     "autoload": {
         "psr-4": {
