--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "authors": [
         {
             "name": "Raikia",
-            "email": "raikia@example.com"
+            "email": "raikia@protonmail.com"
         }
     ],
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^10.0|^11.0"
+        "laravel/framework": "^10.0|^11.0",
+        "eveseat/web": "^5.0",
+        "eveseat/services": "^5.0",
     },
     "autoload": {
         "psr-4": {
